--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "@nestjs/graphql": "^10.0.8",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/bcrypt": "^5.0.0",
     "apollo-server-express": "^3.6.7",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "pg": "8.6.0",
