--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.8",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^2.0.1",
     "@nestjs/typeorm": "^8.0.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/cron": "^2.0.0",
     "apollo-server-express": "^3.6.7",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
