--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@nestjs/typeorm": "^8.0.3",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^4.0.1",
+    "@types/cache-manager-ioredis": "^2.0.2",
     "@types/cron": "^2.0.0",
     "apollo-server-express": "^3.6.7",
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.1.0",
+    "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
